# crm-skills-openclaw

./: .env.example  .gitignore  LICENSE  README.md
hubspot/: SKILL.md  pyproject.toml
hubspot/src/hubspot_crm/: cli.py  client.py  models.py
hubspot/src/hubspot_crm/commands/: companies.py  contacts.py  deals.py  line_items.py  products.py  subscriptions.py
shared/types/: crm.py
