[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hubspot-crm"
version = "1.0.0"
description = "OpenClaw skill: manage HubSpot CRM objects via CLI"
requires-python = ">=3.11"
dependencies = [
    "hubspot-api-client>=9.0.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
hubspot-crm = "hubspot_crm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hubspot_crm"]
